# owl2diagram

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
code/: core.owl  core2.owl  main.py
code/code/: query.py  uml.py
images/: SCTO.owl
output/: output.md
owl2diagram/: README.md  dia.md  gister.py  main.py  prefixes.py  uml.py
src/owl2diagram/: __init__.py  __main__.py
