[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[project.urls]
Source = 'https://github.com/jatoledo/owl2diagram'
Tracker = 'https://github.com/jatoledo/owl2diagram/issues'
CI = 'https://github.com/jatoledo/owl2diagram/actions'
History = 'https://github.com/jatoledo/owl2diagram/releases'

[project]
name = "owl2diagram"
version = "0.1.2"
description = "Generate a diagram of a given ontology"
readme = "README.md"
authors = [{ name = "Jhon Toledo", email = "ja.toledo@upm.es" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
[project.scripts]
realpython = "owl2diagram.__main__:main"
[project.optional-dependencies]
dev = ["pip-tools", "pytest"]
